paragon/_exemplar.scss
.outline-sidebar-wrapper {
  margin: 0 var(--pgn-spacing-spacer-1) !important;
}
.outline-sidebar {
  --outline-sidebar-bg-color: var(--pgn-color-gray-200);
  .outline-sidebar-heading-wrapper {
    border-top: none;
    border-left: none;
    border-right: none;
    border-bottom: 1px solid white !important;
    background-color: var(--outline-sidebar-bg-color) !important;
  }

  background: var(--outline-sidebar-bg-color);
  --pgn-color-card-bg-base: var(--outline-sidebar-bg-color);

  #outline-sidebar-outline {
    .course-sidebar-section {
      background-color: var(--outline-sidebar-bg-color);
      > button {
        padding: var(--pgn-spacing-spacer-2) 0 var(--pgn-spacing-spacer-2) var(--pgn-spacing-spacer-4) !important;
      }
      &.active-section button {
        background-color: var(--outline-sidebar-bg-color);
        --pgn-btn-color: var(--pgn-color-secondary-base) !important;
        color: var(--pgn-color-secondary-base) !important;

        > div.text-dark-500 {
          color: var(--pgn-color-secondary-base) !important;
        }
      }
    }
    li > div.pgn_collapsible {
      margin-bottom: 0 !important;
      padding: var(--pgn-spacing-spacer-2) var(--pgn-spacing-spacer-4);
      li a {
        padding: var(--pgn-spacing-spacer-2) var(--pgn-spacing-spacer-4);
      }
    }

    .collapsible-trigger,
    .collapsible-card-lg {
      border: none !important;
      padding: var(--pgn-spacing-spacer-2) 0 var(--pgn-spacing-spacer-2) var(--pgn-spacing-spacer-2) !important;
    }

    .active-unit {
      --pgn-color-info-100: var(--outline-sidebar-bg-color);
      a {
        color: var(--pgn-color-secondary-base) !important;
      }
    }

    .active-section {
      color: var(--pgn-color-secondary-base) !important;

      .collapsible-trigger span.align-middle.text-dark-500 {
        color: var(--pgn-color-secondary-base) !important;
      }
    }
  }

  .course-sidebar-section {
    margin-bottom: 0 !important;
    border: none !important;

    button {
      padding: var(--pgn-spacing-spacer-2) var(--pgn-spacing-spacer-4) !important;
    }
  }
}

header.site-header-desktop nav button.menu-trigger {
  border: none;
}

.learning-header .user-dropdown {
  margin: 0 !important;

  .dropdown-toggle {
    border: none;
    padding: 0;

    &::after {
      display: none;
    }
  }
}

/* This adds support for customising the font of the display classes */
.display-1,
.display-2,
.display-3,
.display-4 {
  font-family: var(--pgn-typography-display-font-family);
}

/* Allows the unit container to grow beyond the default 1024px */
.unit-container {
  overflow-x: auto;
  max-width: 100vw !important;
  @media (min-width: 576px) {
    padding-left: 0 !important;
    padding-right: 0 !important;
  }
}

.unit-iframe-wrapper {
  margin-left: 0 !important;
  margin-right: 0 !important;
}

/* The default max-width of the main container is still limited, this undoes that */
.app-container #main-content {
  max-width: 100%;
  padding: 0;
}

header.learning-header {
  padding-right: var(--pgn-spacing-spacer-4);
  padding-left: var(--pgn-spacing-spacer-4);

  .container-xl {
    max-width: none;
  }
  .header-course-title {
    font-family: var(--pgn-typography-headings-font-family);
  }
}

dialog.courseware-search {
  margin: 60px 0 0;
  border-radius: var(--pgn-size-border-radius-lg);
}

#main-content > .position-relative {
  margin: 0 !important;
  padding: 0 !important;
}

